# tahko

./: Dockerfile  Pipfile  README.md  app.js  app.py  docker.conf  package-lock.json  package.json  pyproject.toml  video.js
jstemplates/: index.html  video.html
templates/: base.html  index.html
