[tool.poetry]
name = "tahko"
version = "0.1.0"
description = ""
authors = ["tinglev <tinglev@kth.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.22"
pyopenssl = "^19.0"
flask-socketio = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
